# iterable-data-import

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
examples/: example_with_error_handlers.py  simple_example.py  simple_import.py
src/iterable_data_import/: __init__.py  import_action.py  iterable_data_import.py  iterable_resource.py
src/iterable_data_import/data_sources/: data_source.py  file_system.py
src/iterable_data_import/error_recorders/: api_error_recorder.py  map_error_recorder.py
src/iterable_data_import/importers/: importer.py  iterable_request.py  no_op_importer.py  sync_api_client.py  sync_api_importer.py
tests/integration/: file_system_test.py  integration_test_utils.py  iterable_data_import_integration_test.py
tests/integration/fixtures/: data.csv  data.json  integration-test-data.csv
tests/unit/: file_system_test.py  iterable_data_import_test.py  sync_api_importer.py
tests/unit/fixtures/: 10-test-csv-records.csv  10-test-newline-delimited-json-records.json  10000-test-csv-records.csv  10000-test-newline-delimited-json-records.json
