[tool.poetry]
name = "iterable-data-import"
version = "0.1.0"
description = "A library to simplify bulk importing data into Iterable"
authors = ["julianmclain <julianrmclain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
pytest-cov = "^2.12.1"
python-dotenv = "^0.19.1"
iterablepythonwrapper = "^1.1"
Faker = "^9.3.1"

[tool.poetry.scripts]
iterable-data-import = "iterable_data_import.iterable_data_import:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(name)s - [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["iterable_data_import"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[build-system]
requires = ["poetry>=1.1.10"]
build-backend = "poetry.masonry.api"
